--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="three"></div>
 
     <script src="assets/lib/dat-gui/build/dat.gui.min.js"></script>
+    <script src="assets/lib/stats.js/build/stats.min.js"></script>
 	<script src="assets/lib/greensock/src/minified/TweenMax.min.js"></script>
 	<script src="assets/lib/threejs/build/three.min.js"></script>
 
