Change dev server. Remove Wagner. Some other little updates

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
 </head>
 <body>
   <script src="./build/main.js"></script>
-  <script src="./build/vendors/wagner/Wagner.js"></script>
+  <!-- <script src="./build/vendors/wagner/Wagner.js"></script>
   <script src="./build/vendors/wagner/Wagner.base.js"></script>
   <script>
     // configure Wagner
     WAGNER.vertexShadersPath = './build/vendors/wagner/vertex-shaders/';
     WAGNER.fragmentShadersPath = './build/vendors/wagner/fragment-shaders/';
-  </script>
+  </script> -->
 </body>
 </html>
