--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
   </style>
 </head>
 <body>
+  <div class="splash">
+    <div class="start">
+      yolo
+    </div>
+  </div>
   <script src="./build/main.js"></script>
 </body>
 </html>
