--- a/public/index.html
+++ b/public/index.html
@@ -3,22 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Fluctus Experiment</title>
-  <style>
-    body, html {
-      width: 100%;
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-  </style>
+
+  <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
-  <div class="splash">
-    <div class="start">
-      yolo
-    </div>
-  </div>
+  <!-- <div class="splash">
+    <div class="start">yolo</div>
+  </div> -->
   <script src="./build/main.js"></script>
 </body>
 </html>
