--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fluctus Experiment</title>
+  <title>FLUCTUS</title>
   <link rel="icon" type="image/png" href="favicon.png" />
   <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
 </head>
