--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,23 @@
   <meta name="viewport" content="width=device-width">
   <title>FLUCTUS</title>
   <link rel="icon" type="image/png" href="favicon.png" />
+
+  <!-- Facebook -->
+ <meta property="og:image" content="http://jojo.ninja/assets/images/share.png">
+ <meta property="og:title" content="Jordan Machado">
+ <meta property="og:url" content="http://jojo.ninja">
+ <meta property="og:site_name" content="Jordan Machado">
+ <meta name="og:description" content="French creative developper">
+
+ <!-- Twitter -->
+ <meta name="twitter:card" content="summary">
+ <meta name="twitter:site" content="@xvi_jojo">
+ <meta property="twitter:title" content="Jordan Machado">
+ <meta name="twitter:creator" content="@xvi_jojo">
+ <meta name="twitter:description" content="French creative developper">
+ <meta property="twitter:image:src" content="http://jojo.ninja/assets/images/share.png">
+
+
 </head>
 <body>
   <div class="main">
