Added mobile fallback

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,10 @@
     <div class="twitter"><a href="https://twitter.com/xvi_jojo" target="blank">Twitter</a></div>
 
     <div class="credits">Veens - Girl</div>
+    <p class="mobile-fallback">
+      This experiment is not available for mobile devices.<br />
+      Please use your desktop :).
+    </p>
 
   </div>
 
