Added mobile support

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
               font-family="Brandon Grotesque"
               font-size="10"
               fill="#324874"
-              textLength="45">START</text>
+              textLength="45">LOADING</text>
         <rect x="55" y="20" width="45" height="5" fill="#ed6eb2">
     </svg>
 
